PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Modified: key binding of the *centi-assign*, *centi-summary* and
  *centi-restore-all*; their key sequence  now all use the meta key to make
  space of other key sequences.
- Add: the *pel-kmacro-ring-show-status* bound to ~<f11> k ?~.  It shows
  information about the keyboard macro ring.
- Fix: In *emacs-lisp-mode*, activating the *flycheck-mode* used to override
  the ~<f12> c~ key prefix. This is no longer the case; instead the
  *flycheck-list-errors* is bound to ~<f12> c l~,
  *flycheck-display-error-at-point* is bound to ~<f12> c .~ and
  *flycheck-explain-error-at-point* is bound to ~<f12> c /~.
- Modified: *zrgrep* key binding from ~<f11> g z~ to ~<f11> g R~ to make space
  for the fast fuzzy search based on fzf: *fzf-grep*, bound to ~<f11> g z~ and
  *fzf-grep-in-dir*  bound to ~<f11> g Z~.
- Improved: *pel-find-file-at-point-in-window* such that if a dired buffer is
  already opened point moves into it. This improves behaviour of
  *pel-open-at-point* in the same way.
- Update: key bindings for file management, find and grep to make space for
  more key bindings using fast fuzzy file search based on the fzf utility:
  - moved all find-based command under the new *pel:find* prefix bound to
    ~<f11 f F~,
  - remapped some commands in the *pel:file* prefix and added others.
- The *pel-open-at-point* command is now able to search for C and C++ header files in more locations: the
  *pel-c-file-searched-extra-dir-trees* and *pel-c++-file-searched-extra-dir-trees*
  user-options can be used to identify lists of directory trees to search recursively
  for C and C++ in addition to the search method already identified.
- PEL no longer uses the ~C-^~ key binding for the *pel-open-at-point* command.
  Instead it provides the ~<M-f6>~ key binding that is even easier to type.